# exodus_helper

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  README.rst  conftest.py  license.txt  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
docs/: requirements.txt
docs/source/: CONTRIBUTING.rst  conf.py  core.rst  create_meshes.rst  element_calculations.rst  exodus_helper.core.rst  exodus_helper.element_calculations.rst  exodus_helper.reconfigure_mesh.rst  exodus_helper.render_mesh.rst  exodus_helper.rst  exodus_helper.topology.rst  index.rst  reconfigure_mesh.rst  render_mesh.rst  topology.rst
examples/: example_create_meshes.py
exodus_helper/: __init__.py  core.py  dir_exodus.py  element_calculations.py  reconfigure_mesh.py  render_mesh.py  topology.py
tests/: test_add_variable.e  test_calculate_volumes_element.g  test_calculate_volumes_grain.g  test_convert_tet.g  test_create_sets_canonical.g  test_exodus_helper.py  test_full.g  test_get_elements_on_surface.g  test_init.py
